# led_game

./: .gitignore  Cargo.toml  README.md  build.rs  memory.x  rust-toolchain.toml
.cargo/: config.toml
src/: button_driver.rs  error.rs  game.rs  game_loop.rs  game_old.rs  led_driver.rs  lib.rs  main.rs  message.rs  now_playing_led_driver.rs  numeric_led_driver.rs  score_driver.rs  solo_led_driver.rs
src/error/: digit.rs  hex_digit.rs  message.rs
src/game/: numeric_led.rs  state.rs
src/game/numeric_led/: digit_panel.rs  encoded_led_digit.rs
src/game/numeric_led/encoded_led_digit/: led_digit.rs
src/game_loop/: game_mode.rs  game_state.rs
src/game_old/: state.rs  state_new.rs  trait.rs
src/game_old/trait/: advance_state.rs  game_state.rs
src/message/: button.rs  game.rs  now_playing_led.rs  numeric_led.rs  score.rs
src/numeric_led_driver/: decimal_pos.rs  numeric_led.rs
src/numeric_led_driver/numeric_led/: encoded_led_digit.rs  led_panel.rs  numeric_led_pins.rs
src/numeric_led_driver/numeric_led/encoded_led_digit/: number_led_digit.rs
src/numeric_led_driver/numeric_led/led_panel/: decimal_separator.rs
src/score_driver/: score_mode.rs  score_state.rs
