[package]
edition = "2021"
name = "led_game"
version = "0.1.0"
authors = ["Brad Gibson <u007d@humanenginuity.com>"]
resolver = "2"

[dependencies]
defmt = "0.3.8"
defmt-rtt = "0.4.1"
panic-probe = { version = "0.3", features = ["print-defmt"] }

embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
embedded-io = "0.6.1"
embedded-io-async = "0.6.1"
embedded-storage = "0.3.1"

cortex-m-rt = "0.7.3"

embassy-executor = { version = "0.5.0", features = ["task-arena-size-1024", "arch-cortex-m", "executor-thread", "defmt", "integrated-timers", "executor-interrupt"] }
embassy-sync = { version = "0.6.0" }
embassy-time = { version = "0.3.1", features = ["defmt", "defmt-timestamp-uptime"] }

cortex-m = { version = "0.7.7" }
embassy-rp = { version = "0.1.0", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl"] }
thiserror = { version = "1.0.50", package = "thiserror-core", default-features = false }
embassy-futures = "0.1.1"
rand = { version = "0.8.5", default-features = false, features = ["small_rng"] }
